战斗配置文件第二轮简单汉化

--- a/conf/battle/battle.conf
+++ b/conf/battle/battle.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -165,8 +165,8 @@ equip_self_break_rate: 100
 // This affects the behaviour of skills like acid terror and meltdown
 equip_skill_break_rate: 100
 
-// Do weapon attacks have a attack speed delay before actual damage is applied? (Note 1)
-// NOTE: The official setting is yes, even thought it degrades performance a bit.
+// 使用武器进行攻击时, 是否会延迟一小会儿才产生实际伤害? (开关选项)
+// 提示: 官服的设置为 yes, 尽管这会降低一些性能.
 delay_battle_damage: yes
 
 // 使用弓系武器或枪系武器时, 是否消耗箭矢或子弹?
