--- a/conf/battle/client.conf
+++ b/conf/battle/client.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -12,11 +12,37 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Minimum delay between whisper/global/party/guild messages (in ms)
-// Messages that break this threshold are silently omitted. 
+// 发私聊/公聊/组队/公会消息的最小间隔时间 (单位为毫秒)
+// 如果消息发得过快, 会被地图服务器忽视掉, 客户端会感觉和消息了跟没发出去一样,
+// 发送者和周围的人都无法在聊天栏中看到被地图服务器忽略的消息.
+// 
+// 设置为 0 表示没有最小时间间隔限制, 随便发
 min_chat_delay: 0
 
-// Valid range of dyes and styles on the client.
+// 客户端有效的服装染色和发型、发色编号范围
+// 
+// 我们知道官方默认情况下的发型只有 0~27 一共28种,
+// 如果玩家填写了一个不存在的发型编号的话,
+// 就会迫使客户端去读取这个不存在的编号的图档文件,
+// 最终导致客户端报错或者卡死...
+// 
+// 这里的几个选项就是为了避免玩家或 GM 
+// 给发型、发色和服装染色设置了超出范围的值而设定的保护阀值
+//
+// 举个例子: 
+// 如果你添加了不止 28 种发型的话, 那么就需要调整下面
+// max_hair_style 的值, 否则当你给玩家设置编号超过 27 的发型时,
+// 服务端就会报错来告诉你填写的发型编号不在有效范围内
+//
+// 以下是各选项说明:
+// min_hair_style  发型编号的最小值
+// max_hair_style  发型编号的最大值
+// min_hair_color  发色编号的最小值
+// max_hair_color  发色编号的最大值
+// min_cloth_color 服装颜色编号的最小值
+// max_cloth_color 服装颜色编号的最大值
+// min_body_style  服装风格编号的最小值
+// max_body_style  服装风格编号的最大值
 min_hair_style: 0
 max_hair_style: 27
 min_hair_color: 0
@@ -26,9 +52,11 @@ max_cloth_color: 4
 min_body_style: 0
 max_body_style: 1
 
-// When set to yes, the damage field in packets sent from woe maps will be set
-// to -1, making it impossible for GMs, Bots and Hexed clients to know the
-// actual damage caused by attacks. (Note 1)
+// 是否隐藏公会战时对敌对单位的伤害数值
+// 
+// 若启用此选项, 任何人在 GVG 地图中产生的伤害数值
+// 将会在发送给客户端的时候都会被强制设为-1, 此操作会让 GM、外挂机器人和
+// 以其他方式篡改客户端的人无法在 GVG 时得到自己或其他人产生的具体伤害数值. (开关选项)
 hide_woe_damage: no
 
 // "hair style" number that identifies pet.
@@ -73,9 +101,14 @@ wedding_modifydisplay: no
 // Save Clothes color. (This will degrade performance) (Note 1)
 save_clothcolor: yes
 
-// Save body styles. (Note 1)
-// Note: Don't turn this on unless you know what you are doing.
-// Sprites are not released officially.
+// 是否保存角色的服装风格? (开关选项)
+// 在 2015-05-13 以及更新的客户端中, 官服支持对三转角色更换服装风格.
+// 
+// 此选项用来控制当你使用 @bodystyle 指令或 setlook LOOK_BODY2, 1; 脚本指令
+// 更换服装风格后, 在玩家下线的时是否保存服装风格信息
+// 
+// rAthena 的默认值为: no 主要是为了防止新手 GM 在客户端不配套的时更换服装风格
+// 导致再也无法进入游戏的悲剧发生.
 save_body_style: no
 
 // Do not display cloth colors for the wedding class?
@@ -103,19 +136,23 @@ oktoberfest_ignorepalette: no
 // Set this to 1 if your clients have langtype problems and can't display motd properly
 motd_type: 0
 
-// Show rAthena version to users when the login?
+// 当玩家登录游戏时, 是否在聊天窗口中显示熊猫模拟器的版本号? 
 display_version: yes
 
-// When affected with the "Hallucination" status effect, send the effect to client? (Note 1)
-// NOTE: Set to 'no' if the client lags due to the "Wavy" screen effect.
+// 当玩家中了“幻觉”效果时, 是否让客户端显示幻觉的特效? (开关选项)
+// 提示: 若客户端由于显示“波浪”幻觉效果而导致很卡, 可以将此选项设置为 no.
+// 
+// 注意: 从 2013 年的客户端开始, 幻觉效果不再采用“波浪”特效,
+// 而是采用上下左右各颠倒180°的方式来实现, 已经不会和以前使用“波浪”一样很卡了,
+// 建议保持此选项为 yes.
 display_hallucination: yes
 
 // Set this to 1 if your client supports status change timers and you want to use them
 // Clients from 2009 onward support this
 display_status_timers: yes
 
-// Randomizes the dice emoticon server-side, to prevent clients from forging
-// packets for the desired number. (Note 1)
+// 是否在服务端对“丢骰子”表情的结果进行随机处理,
+// 防止客户端通过伪造封包等手段, 来指定骰出来点数? (开关选项)
 client_reshuffle_dice: yes
 
 // Sorts the character and guild storage before it is sent to the client.
@@ -126,7 +163,8 @@ client_sort_storage: no
 // Do we allow to change guilde emblem during woe_time?
 emblem_woe_change: yes
 
-// How many transparent pixel can be found in emblem before detected as invalid? (Note 2)
+// 公会图标最多只能允许百分之多少的透明色像素点? (百分比选项)
+// 若一个公会图标中透明的部分超过设定的百分比, 那么会认为此图标无效.
 emblem_transparency_limit: 80
 
 // Update enemy position while in invisible state? (Note 1)
@@ -135,8 +173,9 @@ emblem_transparency_limit: 80
 //       But it will screw 'the game animation display' while players in invisible state.
 update_enemy_position: yes
 
-// When a player teleports, changes maps, or logs in, will they face the direction they were facing before warped?
-// Official: Disabled, players always face North.
+// 当玩家瞬移、过图、或者登录时, 
+// 是否会保持与瞬移、过图、或者登录之前相同的面向方向?
+// 设置为 no 的话, 则瞬移、过图、或者登录时, 面向方向一律朝北 (官服设定).
 spawn_direction: no
 
 // Show the MVP EXP reward message for clients 2013-12-23cRagexe and newer? (Note 1)
