--- a/conf/battle/exp.conf
+++ b/conf/battle/exp.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -12,14 +12,37 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Rate at which exp. is given. (Note 2)
+// 基础经验值倍率 (百分比选项)
 base_exp_rate: 100
 
-// Rate at which job exp. is given. (Note 2)
+// 职业经验值倍率 (百分比选项)
 job_exp_rate: 100
 
-// Turn this on to allow a player to level up more than once from a kill. (Note 1)
-multi_level_up: no
+// 玩家杀死魔物后, 得到的经验如果足够连升几级的话, 
+// 是否可以连续升级?(开关选项)
+// 
+// 假设, 从1级升到2级需要420点经验, 从2级升到3级需要660点经验, 
+// 从3级升级到4级需要1080点经验. 
+// 
+// 假设, 此时您为1级, 通过打怪获得了 2200 点经验(足够让您升4级). 
+// 
+// 若此选项为 yes 
+// --------------
+// 您将自动从1级升级到4级, 还富余了40点经验
+// 因为 2200 - (420 + 660 + 1080) = 40
+//
+// 若此选项为 no 
+// -------------
+// 如果从1级升级到2级之后, 剩下的经验值还足以让您升级到3级, 
+// 那么富余的经验值等于: 从1级到2级所需的经验值 - 1, 
+// 即 420 - 1 = 419 点经验值, 更多的经验值会被系统直接丢弃. 
+// 
+// 假设您只通过打怪获得了 600 点经验值的话, 
+// 您只能从1级升级到2级, 剩下的经验值已经不足以让您再升级, 
+// 那么富余的经验值就是: 600 - 420 = 180
+//
+// rAthena 默认值是 no, 熊猫模拟器的默认值是 yes
+multi_level_up: yes
 
 // Allow multi level up until a certain level?
 // This only triggers if multi_level_up is enabled.
@@ -27,36 +50,80 @@ multi_level_up: no
 multi_level_up_base: 0
 multi_level_up_job: 0
 
-// Setting this can cap the max experience one can get per kill specified as a
-// % of the current exp bar. (Every 10 = 1.0%)
-// For example, set it to 500 and no matter how much exp the mob gives, 
-// it can never give you above half of your current exp bar.
+// 杀死一只魔物后获得的经验值最多不能超过当前级别经验的百分之多少?
+// 填写 10 的话表示 1%, 填写 1000 的话表示 100%
+//
+// 举个例子:
+// 玩家从 1 级升级到 2 级需要 350 点经验值, 这时候玩家在20倍经验的情况下
+// 打死了一个波利, 波利本来会给玩家 27 点基础经验, 在乘以 20 倍的情况下就
+// 相当于给予玩家 27 x 20 = 540 点经验, 这已经足够让玩家升级了. 
+//
+// 但是, 如果你设置此选项的值为 500 (即表示50%)的话, 那么每次打死怪物, 
+// 拿到的经验比例最多只能是 50%. 
+// 在刚刚的例子中, 玩家将最多只能拿到 350 x 50% = 175 点经验. 
+// 
+// 原本玩家按道理打死一个波利应该升级了, 但是由于这里的限制, 所以玩家
+// 打死一个波利最多只能让自己的经验值上涨 50% ！
+//
+// 此选项适用于限制在高倍率服务器下, 大号带小号时, 小号升级速度过快
+// 的问题, 您可将此选项改成 50 (即表示5%), 此时就算大号带小号打很厉害
+// 的魔物, 那么小号最多也就只能增加 5% 的经验值. 
+//
+// 此选项如果设置为 0 则表示不限制(默认值为0)
 max_exp_gain_rate: 0
 
-// Method of calculating earned experience when defeating a monster:
-// 0 = uses damage given / total damage as damage ratio
-// 1 = uses damage given / max_hp as damage ratio
-// NOTE: Using type 1 disables the bonus where the first attacker gets 
-//       his share of the exp doubled when multiple people attack the mob.
+// 击杀魔物之后, 获得经验的计算方式:
+// 0 = 经验分配比例 = 玩家造成的伤害 / 魔物受到的总伤害 (jAthena方式)
+// 1 = 经验分配比例 = 玩家造成的伤害 / 魔物的最大血量 (eAthena方式)
+// 提示: 若设置为 1 那么当有多人攻击同一魔物的时候, 禁止第一个攻击者获得双倍经验.
+// 
+// 算法举例:
+// 假设有3个玩家参与攻击了同一个魔物, 魔物的最大血量为 1000, 
+// 为了方便演示我们假设魔物的经验为 1000
+// 造成第一击的 1号 玩家总共造成了 200 点伤害, 2号玩家 500 点, 3号玩家 300点
+//
+// 若按照 eAthena方式 (即选项填写1) 计算, 那么:
+// - 1号玩家 = 1000经验 x (自己造成伤害200 / 魔物最大血量1000) = 1000 x 0.2 = 可获得200点经验
+// - 2号玩家 = 1000经验 x (自己造成伤害500 / 魔物最大血量1000) = 1000 x 0.5 = 可获得500点经验
+// - 3号玩家 = 1000经验 x (自己造成伤害300 / 魔物最大血量1000) = 1000 x 0.3 = 可获得300点经验
+//
+// 若按照 jAthena方式 (即选项填写0) 计算, 那么:
+// - 1号玩家 = 1000经验 x (自己造成伤害200 x 2倍 / (魔物最大血量1000 + 第一击用户造成的伤害200)) = 1000 x (400 / 1200) = 1000 x 0.33 = 可获得330点经验
+// - 2号玩家 = 1000经验 x (自己造成伤害500 / (魔物最大血量1000 + 第一击用户造成的伤害200)) = 1000 x (500 / 1200) = 1000 x 0.42 = 可获得420点经验
+// - 3号玩家 = 1000经验 x (自己造成伤害300 / (魔物最大血量1000 + 第一击用户造成的伤害200)) = 1000 x (300 / 1200) = 1000 x 0.25 = 可获得250点经验
+//
+// 注意: 在实际运算过程中, 还会根据魔物体型进行修正, 多人攻击经验加成, 复兴后的经验惩罚机制介入等等, 所以最终的经验不一定如上所示.
 exp_calc_type: 0
 
-// Experience increase per attacker. That is, every additional attacker to the
-// monster makes it give this much more experience
-// (eg: 5 people attack with 25 here, +(25*4)% -> +100% exp)
+// [多人攻击经验加成] - 每多一个人攻击相同的魔物, 获得的经验值增加百分之多少?
+// 例如: 当此选项配置为 25 的时候, 有 5 个玩家攻击了同一个魔物, 那么最终经验值会
+// 增加(配置为25 x (5人 - 1))% = 25 x 4 = 100% 的经验值, 相当于两倍经验.
 exp_bonus_attacker: 25
 
-// Max number of attackers at which exp bonus is capped
-// (eg: if set at 5, the max bonus is 4*bonus-per-char regardless of attackers)
+// [多人攻击经验加成] - 最多允许几个人同时攻击魔物会带来加成?
+// 最多允许增加 (exp_bonus_max_attacker - 1) x exp_bonus_attacker 的经验值.
+// 例如: 当此选项配置为 6 的话, 那么最多允许增加 (6 - 1) x 25 = 125% 的经验值.
 exp_bonus_max_attacker: 12
 
-// MVP bonus exp rate. (Note 2)
+// 打死 MVP 魔物后, MVP 玩家获得的 MVP 经验值倍率. (百分比选项)
 mvp_exp_rate: 100
 
-// Rate of base/job exp given by NPCs. (Note 2)
+// 任务经验值的取得倍率 (百分比选项)
+// 这里的“任务经验值”是指 NPC 通过 getexp 脚本指令给予玩家的基础/职业经验值. 
+// 
+// 将此选项设置为2000(即20倍), 那么假设 NPC 原定计划给玩家 10 点基础经验
+// 和5点职业经验, 玩家实际拿到的经验会是200点基础经验和100点职业经验. 
 quest_exp_rate: 100
 
-// The rate of job exp. from using Heal skill (100 is the same as the heal amount, 200 is double.
-// The balance of the exp. rate is best used with 5 to 10)
+// 使用治愈技能时, 获得的职业经验值倍率. (百分比选项)
+// 此选项为 0 的话, 说明使用治愈术不会增加职业经验值 (官服如此).
+// 填写大于 0 的数, 那么使用治愈术会获得(治愈量 x 这里配置的百分比数值)的职业经验.
+// 
+// 举个例子:
+// 填写 100 的话, 那么治愈了 1420 点 HP 就会获得 1420 点职业经验值.
+// 填写 200 的话, 那么治愈了 1420 点 HP 就会获得 2840 点职业经验值.
+// 
+// 如果想启用此选项, 那么为了平衡考虑, rAthena 官方推荐将此选项配置为 5 或者 10.
 heal_exp: 0
 
 // The rate of exp. that is gained by the process of resurrection, a unit is 0.01%.
@@ -68,24 +135,34 @@ resurrection_exp: 0
 // The way it is calculated is (money received * skill lv) * shop_exp / 10000.
 shop_exp: 0
 
-// PVP exp.  Do players get exp in PvP maps
-// (Note: NOT exp from players, but from normal leveling)
+// 玩家在 PVP 地图中击杀魔物是否能获得经验?
+// 注意: 无论这个开关的状态如何, 击杀玩家都是没有经验的. 
+// 只有击杀魔物才会受本选项影响. 
 pvp_exp: yes
 
-// When a player dies, how should we penalize them?
-// 0 = No penalty.
-// 1 = Lose % of current level when killed.
-// 2 = Lose % of total experience when killed.
+// 当玩家死亡时, 使用什么方式来惩罚他们?
+// 0 = 没有惩罚
+// 1 = 失去“升到下级所需经验”一定比例的经验值
+//     例如: 
+//     从 1 级升级到 2 级需要 1000 点经验, 我现在有 200 点经验值, 
+//     现在我死亡了, 以惩罚 1% 经验为例
+//     将此选项设置为1的话, 我要失去 1000 * 1% = 10 点经验值
+//
+// 2 = 失去“现有经验值”一定比例的经验值
+//     例如: 
+//     从 1 级升级到 2 级需要 1000 点经验, 我现在有 200 点经验值, 
+//     现在我死亡了, 以惩罚 1% 经验为例
+//     将此选项设置为2的话, 我要失去 200 * 1% = 2 点经验值
 death_penalty_type: 1
 
-// Base exp. penalty rate (Each 100 is 1% of their exp)
+// 死亡时基础经验值惩罚比例 (100 表示 1% 的经验值)
 death_penalty_base: 100
 
-// Job exp. penalty rate (Each 100 is 1% of their exp)
+// 死亡时职业经验值惩罚比例 (100 表示 1% 的经验值)
 death_penalty_job: 100
 
-// When a player dies (to another player), how much zeny should we penalize them with?
-// NOTE: It is a percentage of their zeny, so 100 = 1%
+// 当玩家死亡时, 将失去身上携带的多少Zeny?
+// 注意: 这是 Zeny 的百分比选项, 填写 100 表示惩罚玩家失去 1% 的Zeny
 zeny_penalty: 0
 
 // Will players on max base/job level lose the EXP on death?
