--- a/conf/battle/gm.conf
+++ b/conf/battle/gm.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -26,7 +26,12 @@ charcommand_symbol: #
 // The maximum quantity of monsters that can be summoned per GM command (0 denotes an unlimited quantity)
 atcommand_spawn_quantity_limit: 100
 
-// Maximum number of slave-clones that can be have by using the @slaveclone at command. (0 denotes unlimited quantity)
+// 当 GM 使用 @slaveclone 指令召唤出克隆随从时, 
+// 累计最多能召唤多少个随从? (填写 0 表示没有限制)
+//
+// 克隆随从是一种类似佣兵的东西, 它可以基于某个玩家的等级和素质点, 
+// 克隆出一个外观和能力上与指定玩家一模一样的魔物, 他会跟随着召唤他的主人, 
+// 能够主动攻击普通魔物和主人的敌对目标. 
 atcommand_slave_clone_limit: 25
 
 // If 'no', commands require exact player name. If 'yes', entering a partial 
