--- a/conf/battle/player.conf
+++ b/conf/battle/player.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -46,7 +46,8 @@ quest_skill_learn: no
 // NOTE: If you have quest_skill_learn set to yes, quest skills are always reset.
 quest_skill_reset: no
 
-// You must have basic skills to be able to sit, trade, form a party or create a chatroom? (Note 1)
+// 当使用“坐下、交易、组队或者开聊天室”之前, 是否检查“基础技能”的等级? (开关选项)
+// 如果“基础技能”的等级不足, 那么将无法使用对应的功能. 
 basic_skill_check: yes
 
 // When teleporting, or spawning to a map, how long before a monster sees you if you don't move? (time is in milliseconds)
