--- a/conf/battle/status.conf
+++ b/conf/battle/status.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
@@ -12,7 +12,17 @@
 //             例如: 若想表示玩家和宠物, 只需填写 5 即可 (1 + 4)
 //--------------------------------------------------------------
 
-// Should skill casting be cancelled when inflicted by curse/stun/sleep/etc (includes silence) (Note 3)?
+// 什么单位在咏唱技能时, 主动或被迫进入冰冻、昏迷、石化、白色监狱、
+// 钻石星尘、装死等状态时, 会被强制取消咏唱 (掩码选项)?
+//
+// 在 rAthena 官方的英文描述中, 这个选项还会影响“沉默状态”
+// 实际上这个选项和“沉默状态”没有半毛钱关系...
+// 无论你改成什么值, 牧师的“沉默之术”技能都会按照既定功能生效
+//
+// 这是一个掩码选项, 请参考顶部的说明. 
+// 如果想让魔物在进入了上述异常状态后, 咏唱的技能会被中断, 那么
+// 只需要将此选项的值改成 2 即可. 
+// 如果不只是魔物, 还想加上佣兵, 那么就是 2 + 16 填写 18 就对了. 
 status_cast_cancel: 0
 
 // Will certain skill status-changes be removed on logout?
