--- a/conf/battle/drops.conf
+++ b/conf/battle/drops.conf
@@ -1,7 +1,7 @@
 ﻿//--------------------------------------------------------------
 // 熊猫模拟器战斗配置选项
 // 最初的翻译由 Peter Kieser <pfak@telus.net> 完成
-// 由 Ancyker 改写成纯英文
+// 由 Ancyker 改写成纯英文, 由熊猫模拟器开发团队进行汉化
 //--------------------------------------------------------------
 //   开关选项: 可以用 on/off, yes/no 或 1/0 来表示开关
 // 百分比选项: 填写 100 即表示 100%
