修正 nomail 地图标记部分功能失效的问题

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -36,10 +36,10 @@
 2016: 很抱歉, 您的客户端版本 (PACKETVER) 低于 20150513, 无法使用该指令.
 
 // 地图标记 - notoken
-2017: 此地图禁止原地复活!
+2017: 此地图禁止原地复活, 请离开此地图后重试.
 
 // 地图标记 - nocapture
-2018: 此地图禁止捕捉宠物.
+2018: 此地图禁止捕捉宠物, 请离开此地图后重试.
 
 // 战斗配置选项 - show_mob_info
 // 让魔物名称显示更多信息时所呈现的具体文本 (感谢“瓜瓜”建议)
@@ -76,7 +76,7 @@
 // 2062-2080 预留给未来可能出现的新属性
 
 // 地图标记 - nomail
-2095: 此地图禁止使用邮箱及其相关功能!
+2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
 
 // 管理员指令 - @mapinfo
 2100: 熊猫地图标记:
