--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -541,9 +541,9 @@ Body:
 - Original: "Character '%s' (CID: %d, AID: %d) has sex '%c', but PACKETVER does not support per-character sex. Defaulting to 'U'.\n"
   Translation: ""
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @autotrade).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @autotrade 指令登出.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @autotrade 指令登出了游戏.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 登出了游戏.\n"
 - Original: "Character server IP address : %s -> %s\n"
   Translation: "角色服务器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
@@ -1515,7 +1515,7 @@ Body:
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
-  Translation: ""
+  Translation: "[副本系统] 已建立新地图 '%s' (%d) 基于现有地图 '%s' (%d) 构建\n"
 - Original: "[Instance] Created: %s (%hu).\n"
   Translation: "[副本系统] 已创建副本: %s (副本编号: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
