--- a/tools/python/requirements.txt
+++ b/tools/python/requirements.txt
@@ -1,8 +1,8 @@
-pefile==2019.4.18
-colorama==0.4.1
-opencc_python_reimplemented==0.1.5
-pdbparse==1.4
-chardet==3.0.4
-python-dotenv==0.10.5
-GitPython==3.0.5
-PyYAML==5.3
+pefile
+colorama
+opencc_python_reimplemented
+pdbparse
+chardet
+python-dotenv
+GitPython
+PyYAML
