--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -198,6 +198,7 @@ vending_items_table: vending_items
 market_table: market
 roulette_table: db_roulette
 guild_storage_log: guild_storage_log
+suspend_table: suspend
 
 // 是否让地图服务器加载 SQL 版本的 item_db, mob_db 及 mob_skill_db? (yes/no)
 // 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.txt、
