--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -355,7 +355,7 @@ Body:
 - Original: "%stype=%s%u, length=%lu\n"
   Translation: ""
 - Original: "'[{CL_WHITE}]%s[{CL_RESET}]' logged in. (AID/CID: '[{CL_WHITE}]%d/%d[{CL_RESET}]', IP: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', Group '[{CL_WHITE}]%d[{CL_RESET}]').\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已上线. (账号编号: '[{CL_WHITE}]%d[{CL_RESET}]', 角色编号: '[{CL_WHITE}]%d[{CL_RESET}]', IP地址: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', 账号的分组级别: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已上线. (账号编号: '[{CL_WHITE}]%d[{CL_RESET}]', 角色编号: '[{CL_WHITE}]%d[{CL_RESET}]', IP地址: '[{CL_WHITE}]%d.%d.%d.%d[{CL_RESET}]', 组别: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
 - Original: "(%s) mapindex_id2name: Requested name for non-existant map index [%d] in cache.\n"
   Translation: ""
 - Original: "(%s) mapindex_name2id: Map \"%s\" not found in index list!\n"
@@ -737,7 +737,7 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: ""
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线挂店的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售道具.\n"
 - Original: "Done reading %s.\n"
   Translation: "已读取 %s.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -1489,7 +1489,7 @@ Body:
 - Original: "Value of 'save_settings' is not set, player's data only will be saved every 'autosave_time' (%d seconds).\n"
   Translation: ""
 - Original: "Vending loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "已加载 '[{CL_WHITE}]%s[{CL_RESET}]' 的露天商店, 贩卖 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "WARNING: Invalid use of clif_send function\n"
   Translation: ""
 - Original: "WFIFOSET: Attempted to send zero-length packet, most likely 0x%04x (please report this).\n"
