完善离线挂机系统的配置信息, 使之有接近离线挂店的体验

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -104,4 +104,92 @@ max_aspd_for_gvg: 0
 // 还是能够被正常当做聊天信息发出去的.
 atcmd_no_permission: 1
 
+// 当玩家使用挂机系列指令时,
+// 处于哪些模式不会被魔物主动攻击? [掩码选项]
+//
+// &1: 离线挂机 (使用 @suspend 指令触发的挂机)
+// &2: 离开模式 (使用 @afk 指令触发的挂机)
+//
+// 默认值为: 3 (离线挂机 + 离开模式)
+suspend_monsterignore: 3
+
+// 当玩家使用挂机系列指令时,
+// 处于哪些模式会自动回复私聊讯息? [掩码选项]
+//
+// &1: 使用 @suspend 指令触发的离线挂机
+// &2: 使用 @afk 指令触发的离开模式 (AFK)
+//
+// 默认值为: 2 (离开模式)
+suspend_whisper_response: 2
+
+// 使用离线挂机指令 (@suspend) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色身体朝向哪个方位?
+// 
+// -1 = 保持原状
+//
+//  1 = 西北      0 = 正北      7 = 东北
+/             ↖     |     ↗
+//  2 = 正西  <-     +     ->   6 = 正东
+//            ↙     |     ↘
+//  3 = 西南      4 = 正南      5 = 东南
+//  
+// 默认值为: -1 (保持原状)
+suspend_offline_bodydirection: -1
+
+// 使用离线挂机指令 (@suspend) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色头部朝向哪个方位?
+//
+// -1 = 保持原状
+//  0 = 相对于身体朝向的正前方, 头部看向正前方
+//  1 = 相对于身体朝向的正前方, 头部看向右看
+//  2 = 相对于身体朝向的正前方, 头部看向左看
+//
+// 默认值为: -1 (保持原状)
+suspend_offline_headdirection: -1
+
+// 使用离线挂机指令 (@suspend) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
+//
+// -1 = 保持原状
+//  0 = 站立
+//  1 = 坐下
+//
+// 默认值为: -1 (保持原状)
+suspend_offline_sitdown: -1
+
+// 使用离开模式指令 (@afk) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色身体朝向哪个方位?
+// 
+// -1 = 保持原状
+//
+//  1 = 西北      0 = 正北      7 = 东北
+/             ↖     |     ↗
+//  2 = 正西  <-     +     ->   6 = 正东
+//            ↙     |     ↘
+//  3 = 西南      4 = 正南      5 = 东南
+// 
+// 默认值为: -1 (保持原状)
+suspend_afk_bodydirection: -1
+
+// 使用离开模式指令 (@afk) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色头部朝向哪个方位?
+//
+// -1 = 保持原状
+//  0 = 相对于身体朝向的正前方, 头部看向正前方
+//  1 = 相对于身体朝向的正前方, 头部看向右看
+//  2 = 相对于身体朝向的正前方, 头部看向左看
+//
+// 默认值为: -1 (保持原状)
+suspend_afk_headdirection: -1
+
+// 使用离开模式指令 (@afk) 进入挂机状态时,
+// 当地图服务器重启后自动上线的角色处于什么样的站立/坐下状态?
+//
+// -1 = 保持原状
+//  0 = 站立
+//  1 = 坐下
+// 
+// 默认值为: -1 (保持原状)
+suspend_afk_sitdown: -1
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
