--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1765,6 +1765,11 @@
 // Mapflag - nocapture
 2018: Catch pet is prohibited on this map.
 
+// Autotrade & Suspend Mode - Whisper Response
+2019: %s is in autotrade mode and cannot receive whispered messages.
+2020: %s is in suspend mode and cannot receive whispered messages.
+2021: %s is away from keyboard and cannot receive whispered messages.
+
 // Battle Configure - show_mob_info
 2022: [%s]
 2023: Small
