--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -11,3 +11,81 @@
 // 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
+
+// =============================================================
+// 熊貓模擬器拓展的訊息 - 開始
+// =============================================================
+
+// 戰鬥配置選項 - atcmd_no_permission
+// 當玩家沒有許可權, 但卻執行了 GM 指令時顯示在聊天欄的提示資訊
+2000: 你沒有許可權這麼做, 要乖喲...
+
+// 管理員指令 - @recallmap
+2001: 已召喚指定地圖的全部玩家!
+
+//2002 閑置
+
+// 戰鬥配置選項 - cashmount_useitem_limit
+2003: 很抱歉, 當您坐上「商城坐騎」時, 無法使用: %s
+
+// 管理員指令 - @title
+2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
+2013: 編號與稱號的對照表位於客戶端: data\luafiles514\lua files\datainfo\titletable.lub
+2014: 已更換稱號.
+2015: 稱號已取消.
+2016: 很抱歉, 您的客戶端版本 (PACKETVER) 低於 20150513, 無法使用該指令.
+
+// 地圖示記 - notoken
+2017: 此地圖禁止原地復活, 請離開此地圖後重試.
+
+// 地圖示記 - nocapture
+2018: 此地圖禁止捕捉寵物, 請離開此地圖後重試.
+
+// 離線掛店和掛機模式 - 被私聊時自動回覆的資訊
+2019: %s 目前處於離線擺攤的掛店模式, 無法接收或回覆你的私聊資訊.
+2020: %s 目前處於離線掛機模式, 無法接收或回覆你的私聊資訊.
+2021: %s 目前處於離開模式, 無法接收或回覆你的私聊資訊.
+
+// 戰鬥配置選項 - show_mob_info
+// 讓魔物名稱顯示更多資訊時所呈現的具體文字 (感謝「瓜瓜」建議)
+2022: [體型:%s]
+2023: 小
+2024: 中
+2025: 大
+2026: [種族:%s]
+2027: 無形
+2028: 不死
+2029: 動物
+2030: 植物
+2031: 昆蟲
+2032: 魚貝
+2033: 惡魔
+2034: 人形
+2035: 天使
+2036: 龍系
+2037: 玩家
+// 2038-2050 預留給未來可能出現的新種族
+
+// 編號為 2051 的訊息左右無需新增中括號, 客戶端會自動補充.
+2051: 屬性:%s Lv.%d
+2052: 無
+2053: 水
+2054: 地
+2055: 火
+2056: 風
+2057: 毒
+2058: 聖
+2059: 暗
+2060: 念
+2061: 不死
+// 2062-2080 預留給未來可能出現的新屬性
+
+// 地圖示記 - nomail
+2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
+
+// 管理員指令 - @mapinfo
+2100: 熊貓地圖示記:
+
+// =============================================================
+// 熊貓模擬器拓展的訊息 - 結束
+// =============================================================
