--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -41,6 +41,11 @@
 // 地图标记 - nocapture
 2018: 此地图禁止捕捉宠物, 请离开此地图后重试.
 
+// 离线挂店和挂机模式 - 被私聊时自动回复的信息
+2019: %s 当前处于离线摆摊的挂店模式, 无法接收或回复你的私聊信息.
+2020: %s 当前处于离线挂机模式, 无法接收或回复你的私聊信息.
+2021: %s 当前处于离开模式, 无法接收或回复你的私聊信息.
+
 // 战斗配置选项 - show_mob_info
 // 让魔物名称显示更多信息时所呈现的具体文本 (感谢“瓜瓜”建议)
 2022: [体型:%s]
