修正一些问题, 细化一些终端的提示逻辑

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -192,4 +192,11 @@ suspend_afk_headdirection: -1
 // 默认值为: -1 (保持原状)
 suspend_afk_sitdown: -1
 
+// 使用离开模式指令 (@afk) 进入挂机状态时,
+// 将角色的 "头饰上" 更换为哪一个指定的头饰外观编号?
+//
+// 提示: 若设置为 0 则不改变头饰外观
+// 默认值为: 471 (AFK头饰)
+suspend_afk_headtop_viewid: 471
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
