--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -540,8 +540,12 @@ Body:
   Translation: ""
 - Original: "Character '%s' (CID: %d, AID: %d) has sex '%c', but PACKETVER does not support per-character sex. Defaulting to 'U'.\n"
   Translation: ""
+- Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @afk).\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @afk 指令登出, 进入离开模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @autotrade).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @autotrade 指令登出.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @autotrade 指令登出, 进入离线摆摊模式.\n"
+- Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @suspend).\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已使用 @suspend 指令登出, 进入离线挂机模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
 - Original: "Character server IP address : %s -> %s\n"
@@ -736,8 +740,10 @@ Body:
   Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
+- Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位挂机的玩家. (离线挂机有 [{CL_WHITE}]%d[{CL_RESET}] 人, 离开模式有 [{CL_WHITE}]%d[{CL_RESET}] 人).\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线挂店的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售道具.\n"
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线摆摊的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售道具.\n"
 - Original: "Done reading %s.\n"
   Translation: "已读取 %s.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -2166,6 +2172,8 @@ Body:
   Translation: ""
 - Original: "buildin_instance_npcname: Invalid instance NPC (instance_id: %hu, NPC name: \"%s\".)\n"
   Translation: ""
+- Original: "buildin_isnpccloaked: %s is a non-existing NPC.\n"
+  Translation: ""
 - Original: "buildin_itemskill: Invalid skill ID %d passed to item bonus. Skipping.\n"
   Translation: ""
 - Original: "buildin_itemskill: Invalid skill name %s passed to item bonus. Skipping.\n"
@@ -3467,6 +3475,8 @@ Body:
 - Original: "npc_duplicate4instance: the npcname (%s) is already in use while trying to duplicate npc %s in instance %d.\n"
   Translation: ""
 - Original: "npc_duplicate4instance: warp (%s) leading to instanced map (%s), but instance map is not attached to current instance.\n"
+  Translation: ""
+- Original: "npc_enable: Attempted to %s a NPC '%s' on an invalid target %d.\n"
   Translation: ""
 - Original: "npc_enable: Attempted to %s a non-existing NPC '%s' (flag=%d).\n"
   Translation: ""
