完善使用指令时一些异常情况的错误提示

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1804,8 +1804,18 @@
 2061: Unde
 // 2062-2080 Reserved for new attributes
 
+// @suspend
+2081: You cannot enter suspend mode when dead.
+2082: You cannot enter suspend mode on this map.
+
+// @afk
+2083: You cannot enter afk mode when dead.
+2082: You cannot enter afk mode on this map.
+
+//2083-2094 free
+
 // Mapflag - nomail
-2095: Mailbox is prohibited on this map!
+2095: Mailbox or RODEX is prohibited on this map!
 
 // @mapinfo
 2100: Pandas exclusive mapflag:
