--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -80,6 +80,16 @@
 2061: 不死
 // 2062-2080 預留給未來可能出現的新屬性
 
+// 管理員指令 - @suspend
+2081: 死亡時無法進入離線掛機模式, 請先復活.
+2082: 此地圖禁止進入離線掛機模式, 請離開此地圖後重試.
+
+// 管理員指令 - @afk
+2083: 死亡時無法進入離開模式, 請先復活.
+2082: 此地圖禁止進入離開模式, 請離開此地圖後重試.
+
+//2083-2094 閑置
+
 // 地圖示記 - nomail
 2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
 
