--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -80,6 +80,16 @@
 2061: 不死
 // 2062-2080 预留给未来可能出现的新属性
 
+// 管理员指令 - @suspend
+2081: 死亡时无法进入离线挂机模式, 请先复活.
+2082: 此地图禁止进入离线挂机模式, 请离开此地图后重试.
+
+// 管理员指令 - @afk
+2083: 死亡时无法进入离开模式, 请先复活.
+2082: 此地图禁止进入离开模式, 请离开此地图后重试.
+
+//2083-2094 闲置
+
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
 
