拓展离线挂机的不同种类, 延展出离线挂机模式和离开模式 (#260)

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -41,6 +41,11 @@
 // 地图标记 - nocapture
 2018: 此地图禁止捕捉宠物, 请离开此地图后重试.
 
+// 离线挂店和挂机模式 - 被私聊时自动回复的信息
+2019: %s 当前处于离线摆摊的挂店模式, 无法接收或回复你的私聊信息.
+2020: %s 当前处于离线挂机模式, 无法接收或回复你的私聊信息.
+2021: %s 当前处于离开模式, 无法接收或回复你的私聊信息.
+
 // 战斗配置选项 - show_mob_info
 // 让魔物名称显示更多信息时所呈现的具体文本 (感谢“瓜瓜”建议)
 2022: [体型:%s]
@@ -74,6 +79,16 @@
 2060: 念
 2061: 不死
 // 2062-2080 预留给未来可能出现的新属性
+
+// 管理员指令 - @suspend
+2081: 死亡时无法进入离线挂机模式, 请先复活.
+2082: 此地图禁止进入离线挂机模式, 请离开此地图后重试.
+
+// 管理员指令 - @afk
+2083: 死亡时无法进入离开模式, 请先复活.
+2082: 此地图禁止进入离开模式, 请离开此地图后重试.
+
+//2083-2094 闲置
 
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
